--- a/trillo/index.html
+++ b/trillo/index.html
@@ -92,7 +92,7 @@
               </a>
             </li>
           </ul>
-          <div class="legal">&copy 2022 by trillo. All rights reserved.</div>
+          <div class="legal">&copy 2022 by Jonas. All rights reserved.</div>
         </nav>
         <main class="hotel-view">HOTEL</main>
       </div>
