--- a/trillo/index.html
+++ b/trillo/index.html
@@ -141,6 +141,44 @@
               <div class="overview__rating-count">429 voting</div>
             </div>
           </div>
+
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+                nisi dignissimos debitis ratione sapiente saepe. Accusantium
+                cumque, quas, ut corporis incidunt deserunt quae architecto
+                voluptate.
+              </p>
+              <p class="paragraph">
+                Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+                </p>
+              </p>
+              <ul class="list">
+                <li class="list_item">Close to beach</li>
+                <li class="list_item">Breakfast include</li>
+                <li class="list_item">Free airport shuttle</li>
+                <li class="list_item">Free wifi in all room</li>
+                <li class="list_item">Air conditioning nad heating</li>
+                <li class="list_item">Pets allowed</li>
+                <li class="list_item">We speak all languages</li>
+                <li class="list_item">Perfect for family</li>
+              </ul>
+              <div class="recommend">
+                <p class="recommend__count">
+                  Lucy and 3 other friend recommend this hotel.
+                </p>
+                <div class="recommend__friends">
+                  <img src="img/user-3.jpg" alt="friend-1" class="recommend__photo">
+                  <img src="img/user-4.jpg" alt="friend-2" class="recommend__photo">
+                  <img src="img/user-5.jpg" alt="friend-3" class="recommend__photo">
+                  <img src="img/user-6.jpg" alt="friend-4" class="recommend__photo">
+                </div>
+              </div>
+            </div>
+
+            <div class="user-reviews">REVIEW</div>
+          </div>
         </main>
       </div>
     </div>
