--- a/trillo/index.html
+++ b/trillo/index.html
@@ -155,14 +155,14 @@
                 </p>
               </p>
               <ul class="list">
-                <li class="list_item">Close to beach</li>
-                <li class="list_item">Breakfast include</li>
-                <li class="list_item">Free airport shuttle</li>
-                <li class="list_item">Free wifi in all room</li>
-                <li class="list_item">Air conditioning nad heating</li>
-                <li class="list_item">Pets allowed</li>
-                <li class="list_item">We speak all languages</li>
-                <li class="list_item">Perfect for family</li>
+                <li class="list__item">Close to beach</li>
+                <li class="list__item">Breakfast include</li>
+                <li class="list__item">Free airport shuttle</li>
+                <li class="list__item">Free wifi in all room</li>
+                <li class="list__item">Air conditioning nad heating</li>
+                <li class="list__item">Pets allowed</li>
+                <li class="list__item">We speak all languages</li>
+                <li class="list__item">Perfect for family</li>
               </ul>
               <div class="recommend">
                 <p class="recommend__count">
